Load sandbox parquet/analytics/DSL plugins in internalClusterTest
Wire the sandbox parquet/analytics/DSL plugin stack into server's
internalClusterTest so integration tests run on in-JVM nodes that have
the pluggable data-format engine loaded. Everything is gated behind
-Dsandbox.enabled=true, so normal core builds and CI are unaffected.

server/build.gradle: add the in-JVM-loadable sandbox plugins as
internalClusterTestImplementation deps, compile that source set at JDK
25 (the plugins are JDK 25-only; the main artifact stays at JDK 21),
add the OpenSearch Snapshots repo for the patched Calcite and
unified-query artifacts, pin the transitive versions that would
otherwise trip failOnVersionConflict, and forward the native-library
path, JVM args, and the sandbox.enabled flag into the forked test JVM.

OpenSearchIntegTestCase: inject the sandbox stack via the default
nodePlugins() so a test that declares its own plugins simply does not
receive it (REPLACE-on-override). In the un-overridable node-config
wrapper, couple the STREAM_TRANSPORT and pluggable-dataformat feature
flags -- and a per-Gradle-worker Arrow Flight port range -- to the
plugins actually loaded on each node, so they stay in lockstep with
the plugin set regardless of a subclass's nodeSettings() override. The
per-worker port range keeps parallel forks from contending over the
shared default Flight port range, which otherwise caused bind
failures, leaked node threads, and cascading test skips.

Fix core ITs that build on super.nodePlugins(): use LinkedHashSet to
preserve plugin order in IndexingClusterManagerFailoverIT and
MinimumClusterManagerNodesIT (arrow-base must initialize before
parquet), drop the duplicate FLIGHT mock in RemoteStatePublicationIT,
and opt SimpleThreadPoolIT out of the stack since it asserts on node
thread names.

FlightTransport: shut the gRPC event-loop groups down unconditionally
in stopInternal(), and release resources directly on a failed start so
a failed bind does not leak th